# ChatGLM-6B

./: README.md  pyproject.toml
apphub/: chatglm.py
