[project]
name = "chatglm"
description = "chatbot"
authors = [{name= "houxiao", email = "1084337181@qq.com"}]
version = "1.0.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/MoringLotus/ChatGLM-6B"
Documentation = "https://github.com/MoringLotus/ChatGLM-6B/blob/main/README.md"
Repository = "https://github.com/MoringLotus/ChatGLM-6B"
Changelog = "https://github.com/MoringLotus/ChatGLM-6B/blob/main/CHANGELOG.md"
Issues = "https://github.com/MoringLotus/ChatGLM-6B/issues"

[featurize]
port = "20403"
op_port = "34206"
icon = "https://picx.zhimg.com/v2-2b8b97257260f66e9c2fc640b15af5d2.jpg"
author_github = "https://github.com/MoringLotus"
name = "ChatGLM-6B"
newtab = false